--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "node": ">=4"
   },
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine",
+    "cover": "nyc jasmine",
+    "coveralls": "nyc --reporter=lcov jasmine && cat ./coverage/lcov.info | coveralls"
   },
   "files": [
     "cli.js",
@@ -31,8 +33,9 @@
     "plugin-error": "^1.0.1"
   },
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "jasmine": "^3.2.0",
-    "stream-buffer": "^1.0.0",
+    "nyc": "^13.1.0",
     "stream-buffers": "^3.0.2"
   }
 }
