--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gulp-advzip",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A gulp wrapper for AdvZIP: minify your zip files",
   "license": "MIT",
   "repository": "elliot-nelson/gulp-advzip",
   "author": "Elliot Nelson",
   "engines": {
-    "node": ">=4"
+    "node": ">=6"
   },
   "scripts": {
     "test": "jasmine",
@@ -26,14 +26,16 @@
     "advzip"
   ],
   "dependencies": {
-    "advzip-bin": "^1.0.0",
-    "gulp-intermediate": "^3.0.1",
+    "advzip-bin": "^1.1.0",
+    "gulp-intermediate": "^4.0.0",
     "plugin-error": "^1.0.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
     "jasmine": "^3.2.0",
+    "mkdirp": "^0.5.1",
     "nyc": "^13.1.0",
-    "stream-buffers": "^3.0.2"
+    "stream-buffers": "^3.0.2",
+    "vinyl": "^2.2.0"
   }
 }
